# web-crawler

./: Cargo.toml  Readme.md
src/: checker.rs  crawler.rs  fetcher.rs  html_parser.rs  main.rs
