[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
html5ever = "0.26.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full", "test-util"] }
log = "0.4.20"
url = "2.5.0"
reqwest = "0.11.24"
futures = "0.3.30"
chrono = "0.4.34"

[dev-dependencies]
# For testing
mockito = "0.28"
